# sounderpy

./: .gitignore  CHANGELOG.md  CITATION-KG-Laptop.cff  CITATION.cff  CNAME  DOCUMENTATION.md  FIELD_CAMPAIGN_SOUNDING_PLOTTER.ipynb  Far_Field_MW41_output_20190520_214246.csv  LICENSE  LICENSE.txt  LICENSES  RAOB-STATIONS.txt  README.md  docs.md  notes.txt  paper.md  pyproject.toml  requirements.txt  sounderpy_data  sounderpy_tutorial.ipynb
.github/ISSUE_TEMPLATE/: create-bug-report.md  request-a-feature.md
.github/workflows/: draft-pdf.yml
colab_tutorials/: sounderpy_forecast_models.ipynb  sounderpy_observed_data.ipynb
deepnote/SounderPy_webapp_notebook/: sounderpy_for_anvil.ipynb
docs/: .buildinfo  .buildinfo.bak  CNAME  README.rst  _config.yml  about.html  acars_data_example.html  beginners_sounderpy_cookbook.html  bufkit_data_example.html  bufkit_data_example.ipynb  bufkit_map.html  bufkit_map_anvil.html  community.html  composite_example.html  composite_example.ipynb  conf.py  custom_data_example.html  customdatasources.html  examplegallery.html  examplescripts.html  genindex.html  gettingdata.html  gettingdata.rst  helpertools.html  hodograph-example.html  hodograph_example.html  index.html  index.md  introduction.html  notebook_gallery.html  notebook_gallery.ipynb  objects.inv  plottingdata.html  raob_data_example.html  raob_data_example.ipynb  raob_map.html  raob_map_anvil.html  readingsoundings.html  readthedocs.yml  reanalysis_data_example.html  (+7 more)
docs/_sources/: about.rst.txt  acars_data_example.ipynb.txt  bufkit_data_example.ipynb.txt  bufkit_map.rst.txt  community.rst.txt  composite_example.ipynb.txt  custom_data_example.ipynb.txt  customdatasources.rst.txt  examplegallery.rst.txt  examplescripts.rst.txt  gettingdata.rst.txt  helpertools.rst.txt  hodograph_example.ipynb.txt  index.rst.txt  introduction.rst.txt  plottingdata.rst.txt  raob_data_example.ipynb.txt  readingsoundings.rst.txt  troubleshooting.rst.txt  webapp.rst.txt
docs/_static/: bufkit_map.html  doctools.js  documentation_options.js  nbsphinx-gallery.css  searchtools.js
docs/docs/source/: index.rst  plottingdata.rst
docs/source/: about.html  about.rst  acars_data_example.html  acars_data_example.ipynb  api.rst  bufkit_data_example.ipynb  bufkitmap.html  conf.py  custom_data_example.ipynb  customdatasources.rst  examplegallery.html  examplegallery.rst  examplescripts.html  examplescripts.rst  genindex.html  gettingdata.rst  helpertools.rst  hodograph_example.ipynb  index.rst  introduction.rst  notebook_gallery.ipynb  plottingdata.html  plottingdata.rst  raob_data_example.ipynb  readthedocs.yml  reanalysis_data_example.html  reanalysis_data_example.ipynb  search.html  searchindex.js  sounding_example.html  troubleshooting.html  troubleshooting.rst
docs/source/_static/notebooks/: raob_data_example.ipynb
examples/: FIXED_SKEW_TEST.py  sounderpy_tutorial.ipynb
joss-paper/: paper.bib  paper.md
sounderpy/: DOCUMENTATION.md  README.md  pyproject.toml
sounderpy/src/: __init__.py  sounderpy.py
src/: AIRPORTS.csv  BUFKIT-STATIONS-MASTER.txt  BUOY-STATIONS.txt  IGRA-STATIONS.txt  METAR-STATIONS.txt  NEXRAD_SITES.txt  RAOB-STATIONS.txt  README.md  __init__.py  requirements.txt  sounderpy.py
src/sounderpy/: __init__.py  __sounderpy-test-remove-in-prod__.py  acars_data.py  bufkit_data.py  calc.py  cm1_utils.py  mergeprofiles.py  model_data.py  nexrad_locations.txt  obs_data.py  plot.py  profile_utils.py  radar_utils.py  requirements.txt  rs_reflectivity.txt  sounderpy.py  timeseries.py  utils.py  wrf_utils.py
src/sounderpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sounderpy/SHARPPYMAIN/sharppy/plot/: skew.py
src/sounderpy/SHARPPYMAIN/sharppy/sars/: LICENSE.md  README.md
src/sounderpy/SHARPPYMAIN/sharppy/sharptab/: decoder.py  gui.py  params.py  profile.py  sars_cal.py  watch_type.py
src/sounderpy/SHARPPYMAIN/sharppy/viz/.ipynb_checkpoints/: SPCWindow-checkpoint.py
test_data/: Far_Field_MW41_output_20190520_214246.csv  input_sounding
txt_files/: BUFKIT-STATIONS-MASTER.csv  BUFKIT-STATIONS.txt  BUOY-STATIONS.txt  IGRA-STATIONS.txt  RAOB-STATIONS.txt
